fix: Bugs are fixed in swagger file and auth and master controller
